--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1221,6 +1221,7 @@ footer .social-media-links a:hover svg circle
   nav ul li.btn 
   {
     display: block;
+    color: #fffb00e0;
   }
 
   nav 
@@ -1331,6 +1332,13 @@ footer .social-media-links a:hover svg circle
   {
     width: 40vmin;
   }
+
+  .img-logo 
+  {
+    width : 200px;
+    padding-bottom: 10px;
+    margin: 1px;
+  }
 }
 
 @media (max-width: 350px)
@@ -1343,13 +1351,6 @@ footer .social-media-links a:hover svg circle
   .nom-action
   {
     width:250px;
-  }
-
-  .img-logo 
-  {
-    width : 250px;
-    padding-bottom: 10px;
-    margin: 1px;
   }
 
   nav ul li.logo .logo-apprentis
